--- a/rootfs/etc/caddy/Caddyfile
+++ b/rootfs/etc/caddy/Caddyfile
@@ -5,3 +5,7 @@ file_server browse
 templates {
 	mime "text/html" "text/plain" "image/svg"
 }
+
+headers /projects/* {
+	Content-Type image/svg+xml charset=utf-8
+}
