--- a/rootfs/etc/caddy/Caddyfile
+++ b/rootfs/etc/caddy/Caddyfile
@@ -6,6 +6,6 @@ templates {
 	mime "text/html" "text/plain" "image/svg"
 }
 
-header /projects/* {
-	Content-Type image/svg+xml charset=utf-8
+route {
+	header /projects/* Content-Type "image/svg+xml charset=utf-8"
 }
